// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Layout/Footer default 1`] = `
<Router
  history={
    Object {
      "action": "POP",
      "block": [Function],
      "canGo": [Function],
      "createHref": [Function],
      "entries": Array [
        Object {
          "hash": "",
          "key": "home",
          "pathname": "/",
          "search": "",
        },
      ],
      "go": [Function],
      "goBack": [Function],
      "goForward": [Function],
      "index": 0,
      "length": 1,
      "listen": [Function],
      "location": Object {
        "hash": "",
        "key": "home",
        "pathname": "/",
        "search": "",
      },
      "push": [Function],
      "replace": [Function],
    }
  }
>
  <div
    style={
      Object {
        "height": "100%",
        "padding": "24px",
        "width": "100%",
      }
    }
  >
    <Footer
      className=""
      version={null}
    />
  </div>
</Router>
`;

exports[`Storyshots Layout/Footer with custom content 1`] = `
<Router
  history={
    Object {
      "action": "POP",
      "block": [Function],
      "canGo": [Function],
      "createHref": [Function],
      "entries": Array [
        Object {
          "hash": "",
          "key": "home",
          "pathname": "/",
          "search": "",
        },
      ],
      "go": [Function],
      "goBack": [Function],
      "goForward": [Function],
      "index": 0,
      "length": 1,
      "listen": [Function],
      "location": Object {
        "hash": "",
        "key": "home",
        "pathname": "/",
        "search": "",
      },
      "push": [Function],
      "replace": [Function],
    }
  }
>
  <div
    style={
      Object {
        "height": "100%",
        "padding": "24px",
        "width": "100%",
      }
    }
  >
    <Footer
      className=""
      version={null}
    >
      Version 1.0
      <span
        style={
          Object {
            "margin": "1em",
          }
        }
      >
        Contact
      </span>
    </Footer>
  </div>
</Router>
`;
